# taller-algo-I

./: linksYoutube.txt
Clase01/: links youtube.txt  tarea_uno.cpp
Clase02/template-alumnos/: solucion.tex
Clase03/: tarea_tres.cpp
Clase04/: links.txt  tarea_cuatro.cpp
Clase04/labo04-template-alumnos/src/: main.cpp  vectores.cpp  vectores.h
Clase05/: link_youtube.txt
Clase05/template-alumnos/: ejercicios.cpp
Clase06/: link youtube.txt
Clase06/template-alumnos/: ejercicios.cpp
Clase07/ej2/Test/: llenarTaxisTEST.cpp
Clase07/ej3/Test/: baldosasDelPisoTEST.cpp  electoresTEST.cpp
Clase08/: ejercicios.cpp  main.cpp
Clase09/: main.cpp
Clase09/src/: ejemplo.cpp
Clase10/src/: ejercicios.cpp
Clase11/searching/: ejercicios.cpp
Clase11/sorting/bin-package/src/: main.cpp
TPI/tpi codigo/: CMakeLists.txt  auxiliares.cpp  auxiliares.h  definiciones.h  ejercicios.cpp  ejercicios.h  hackerrank.cpp
TPI/tpi codigo/tests/: EJ01_toroideValidoTEST.cpp  EJ02_posicionesVivasTEST.cpp  EJ03_densidadPoblacionTEST.cpp  EJ04_evolucionDePosicionTEST.cpp  EJ05_evolucionToroideTEST.cpp  EJ06_evolucionMultipleTEST.cpp  EJ07_esPeriodicoTEST.cpp  EJ08_primosLejanosTEST.cpp  EJ09_seleccionNaturalTEST.cpp  EJ10_fusionarTEST.cpp  EJ11_vistaTrasladadaTEST.cpp  EJ12_menorSuperficieVivaTEST.cpp  hackerrankTEST.cpp
ej1/: puntaje.cpp
ej1/Test/: puntajeTEST.cpp
ej3/: baldosasDelPiso.cpp  electores.cpp
